vlib/v/checker/tests/wrong_arr_field_err.vv
arr := []int{len: 100, cap: 200, init1: index * 3}
println(arr)